new collection comments and api-docs update
