# models/comment.js
@@ -1,0 +1,27 @@
+const mongoose = require('mongoose');
+
+const commentSchema = new mongoose.Schema({
+    movie_id: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Movie',
+        required: true
+    },
+    name: {
+        type: String,
+        required: true
+    },
+    email: {
+        type: String,
+        required: true
+    },
+    text: {
+        type: String,
+        required: true
+    },
+    date: {
+        type: Date,
+        required: true
+    }
+});
+
+module.exports = mongoose.model('Comment', commentSchema);
